# aimagain

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  TODO.md  alembic.ini  cleanup-docker.sh  conftest.py  contrac_testing_example.py  contract_testing.md  deploy-zero-downtime-improved.sh  deploy-zero-downtime.sh  deploy.sh  docker-compose.blue-green.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  start.sh  test-deployment.sh
.claude/: settings.json
.cursor/rules/: documentation-standards.mdc  run-tests.mdc
.github/workflows/: build-and-push.yml  cd.yml  ci.yml  deploy.yml
alembic/: README.md  env.py
alembic/versions/: 00bd09b52ed8_your_descriptive_message.py  25c296b4a4cb_rename__id_columns_to_id.py  49b76d8b3b3c_initial_schema.py  5979642445fc_add_last_active_at_to_users_table.py  615021cc5b23_first_migration.py  8a6ada1e0883_add_audit_log_table.py  a8b3c2f17d49_client_referral_intake_form_fields.py  b2dbe3136387_drop_chat_tables_and_columns.py  bb07d18f3f42_add_posts_table.py  c4f9a8b21d34_polymorphic_post_kinds.py  d6d749b73cb7_add_posts_table.py  e7a91d2c5b86_client_referral_basic_fields.py  f3c8e1a47092_provider_availability_basic_fields.py
app/: auth_config.py  db.py  main.py  models.py  users.py
app/api/: decorators.py  errors.py  logging.py  responses.py
app/api/common/: __init__.py  base_router.py  decorators.py  exceptions.py  responses.py
app/api/routes/: auth_pages.py  auth_routes.py  conversations.py  me.py  participants.py  users.py
app/core/: config.py  templating.py
app/logic/: auth_processing.py  conversation_processing.py  me_processing.py  participant_processing.py  user_processing.py
app/middleware/: presence.py
app/models/: __init__.py  base.py  conversation.py  message.py  participant.py  user.py
app/repositories/: conversation_repository.py  dependencies.py  message_repository.py  participant_repository.py  user_repository.py
app/schemas/: conversation.py  message.py  participant.py  user.py
app/services/: conversation_service.py  dependencies.py  exceptions.py  migration_service.py  participant_service.py  presence_service.py  user_service.py
app/templates/users/: list.html
config/: README.md  alembic.ini
deployment/: README.md
deployment/docker/: Dockerfile  docker-compose.test.yml
deployment/droplet-files/: cleanup-docker.sh  deploy.sh  docker-compose.blue-green.yml  promote-admin.sh
deployment/scripts/: deploy-copy-files.sh
notes/: DOCUMENTATION_PLAN.md  README.md  TODO.md  continuous_deployment_plan.md  contract-tests-verify-waiter-not-chef.md.md  contract_test_example_create_conversation.md  deployment_reorganization_plan.md  echobot_plan.md  how_to_partcipate_in_conversations.md  implementation_plan_for_creating_a_conversation.  implementation_plan_message_sending.md  message_polling_tdd_plan.md  message_sending_test_implementations.md
pacts/: frontend-pact-backend-api.json
scripts/: README.md  __init__.py  check_doc_test_coupling.py  dev_cli.py  start.sh  test_dev_cli.py  title_case_check.py
scripts/dev/: __init__.py  migrate.py  promote_admin.py  seed.py  test_migrate.py  test_title_case_check.py  title_case_check.py
scripts/runtime/: start-dev.sh  start.sh
src/: README.md  auth_config.py  db.py  main.py
src/api/: README.md  responses.py
src/api/common/: README.md  __init__.py  base_router.py  decorators.py  exceptions.py  responses.py
src/api/routes/: README.md  RESOURCE_GRAMMAR.md  auth_pages.py  auth_routes.py  conversations.py  me.py  participants.py  posts.py  test_auth_routes.py  test_posts.py  test_users.py  users.py
src/core/: README.md  config.py  templating.py
src/logic/: README.md  audit.py  auth_processing.py  conversation_processing.py  me_processing.py  participant_processing.py  post_processing.py  test_audit.py  test_audit_discipline.py  user_processing.py
src/middleware/: README.md  presence.py
src/models/: README.md  __init__.py  audit_log.py  base.py  conversation.py  participant.py  post.py  user.py
src/repositories/: README.md  audit_repository.py  base.py  conversation_repository.py  dependencies.py  message_repository.py  participant_repository.py  post_repository.py  test_audit_repository.py  user_repository.py
src/schemas/: README.md  conversation.py  post.py  test_post.py  user.py
src/services/: README.md  conversation_service.py  dependencies.py  exceptions.py  participant_service.py  post_service.py  presence_service.py  provider.py  user_service.py
src/templates/: README.md  base.html
src/templates/auth/: login.html  register.html  reset_password.html
static/auth/: register.html
templates/: base.html
templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
templates/conversations/: detail.html  list.html  new.html
templates/me/: conversations.html  invitations.html
templates/users/: list.html
tests/: README.md  conftest.py  fixtures.py  helpers.py  shared_test_data.py  test_helpers.py  test_promote_admin.py  test_title_case_check.py
tests/contract/: conftest.py  test_auth_forms.py  test_server_startup.py
tests/test_api/: conftest.py  test_auth.py  test_conversation_routes.py  test_create_conversation.py  test_create_message.py  test_get_conversation.py  test_helpers.py  test_invite_participant.py  test_list_conversations.py  test_me.py  test_participants.py  test_presence_middleware.py  test_user_presence.py  test_users.py
tests/test_consumer/: test_example.py
tests/test_contract/: .gitignore  README.md  REFACTORING_SUMMARY.md  config.py  conftest.py  conftest_refactored.py  constants.py  consumer_server.py  provider_server.py  pytest.ini  server_management.py  test_auth_forms.py  test_auth_routes_provider.py  test_consumer_auth_form.py  test_consumer_conversation_form.py  test_consumer_invitation_form.py  test_consumer_user_list.py  test_helpers.py  test_provider_api.py  test_provider_auth_api.py
tests/test_playwright/: test_example.py
(+75 files in other folders)
