[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-app"
version = "0.1.0"
description = "A simple chat application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "pathspec",
]

[project.optional-dependencies]
# Application runtime dependencies (for actual app deployment)
app = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "python-dotenv",
    "async-lru",
    "Jinja2",
    "selectolax",
    "fastapi-users[sqlalchemy]",
    "aiosqlite",
    "pydantic-settings",
    "asyncstdlib"
]

dev = [
    "livereload",
    "pathspec",
]

# Testing dependencies
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pact-python",
    "pytest-playwright-asyncio"
]

# Code quality and formatting
lint = [
    "black",
    "isort",
    "autoflake",
    "pre-commit",
]

# Full application with all runtime dependencies
full = [
    "chat-app[app,dev,test,lint]",
]

# All development dependencies (for contributors)
all = [
    "chat-app[dev,test,lint]",
]

[project.scripts]
aim = "scripts.dev_cli:main"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v"
testpaths = ["tests"]
markers = [
    "api: API tests",
    "unit: Unit tests",
    "integration: Integration tests",
    "consumer: Consumer contract tests",
    "provider: Provider contract tests",
    "slow: Tests that take more than 5 seconds",
    "auth: Authentication tests",
    "conversations: Conversation tests",
    "messages: Message tests",
    "invitations: Invitation tests",
    "participants: Participant tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:starlette",
    "ignore::PendingDeprecationWarning:starlette",
    "ignore:.*will be deprecated Pact Python v3:PendingDeprecationWarning",
]

[tool.title-case-check]
ignore_files = [
    "*.log", "*.tmp", ".git/**", "venv/**", "node_modules/**",
    "build/**", "dist/**", "__pycache__/**"
]
always_capitalize = [
    "API", "APIs", "URL", "URLs", "HTTP", "HTTPS", "JSON", "XML", "HTML", "CSS", "JS",
    "SQL", "REST", "RESTful", "FastAPI", "SQLAlchemy", "Jinja2", "pytest", "GitHub",
    "OAuth", "JWT", "UUID", "UUIDs", "CRUD", "TDD", "LLM", "LLMs", "AI", "MVP",
    "PostgreSQL", "SQLite", "Docker", "Python", "JavaScript", "TypeScript",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "src*"]
