[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bedlam-connect"
version = "0.1.0"
description = "A FastAPI web application with authentication and layered architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "pathspec",
]

[project.optional-dependencies]
app = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "python-dotenv",
    "async-lru",
    "Jinja2",
    "selectolax",
    "fastapi-users[sqlalchemy]",
    "aiosqlite",
    "pydantic-settings",
    "asyncstdlib"
]

dev = [
    "livereload",
    "pathspec",
]

test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pytest-playwright-asyncio",
    "pact-python<3",
    "yarl",
    "requests",
]

# Code quality and formatting
lint = [
    "black",
    "isort",
    "autoflake",
    "pre-commit",
]

# Full application with all runtime dependencies
full = [
    "bedlam-connect[app,dev,test,lint]",
]

# All development dependencies (for contributors)
all = [
    "bedlam-connect[dev,test,lint]",
]

[project.scripts]
dev = "scripts.dev_cli:main"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-v --asyncio-mode=auto --ignore=tests/test_contract"
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

filterwarnings = [
    "ignore::DeprecationWarning:starlette",
    "ignore::PendingDeprecationWarning:starlette",
    "ignore:.*will be deprecated Pact Python v3:PendingDeprecationWarning",
]

[tool.title-case-check]
ignore_files = [
    "*.log", "*.tmp", ".git/**", "venv/**", "node_modules/**",
    "build/**", "dist/**", "__pycache__/**"
]
always_capitalize = [
    "API", "APIs", "URL", "URLs", "HTTP", "HTTPS", "JSON", "XML", "HTML", "CSS", "JS",
    "SQL", "REST", "RESTful", "FastAPI", "SQLAlchemy", "Jinja2", "pytest", "GitHub",
    "OAuth", "JWT", "UUID", "UUIDs", "CRUD", "TDD", "LLM", "LLMs", "AI", "MVP",
    "PostgreSQL", "SQLite", "Docker", "Python", "JavaScript", "TypeScript",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "src*"]
